[gd_scene load_steps=16 format=3 uid="uid://cyoldq2plwsx0"]

[ext_resource type="Script" path="res://material_maker/windows/export_animation/export_animation.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://rflulhsuy3ax" path="res://material_maker/widgets/float_edit/float_edit.tscn" id="2"]
[ext_resource type="Script" path="res://material_maker/widgets/size_option_button/size_option_button.gd" id="3"]

[sub_resource type="Shader" id="1"]

[sub_resource type="ShaderMaterial" id="2"]
render_priority = 0
shader = SubResource("1")

[sub_resource type="Shader" id="3"]

[sub_resource type="ShaderMaterial" id="4"]
render_priority = 0
shader = SubResource("3")

[sub_resource type="Shader" id="5"]
code = "shader_type canvas_item;

uniform sampler2D begin;
uniform sampler2D end;

void fragment() {
	vec2 uv = UV*vec2(1.0, -1.0)+vec2(0.0, 1.0);
	COLOR = vec4(mix(vec3(0.0, 0.0, 0.0), vec3(1.0, 0.0, 0.0), clamp(length(texture(begin, uv)-texture(end, uv)), 0.0, 1.0)), 1.0);
}

"

[sub_resource type="ViewportTexture" id="6"]
viewport_path = NodePath("VBox/Images/HBox/Begin/SubViewport")

[sub_resource type="ViewportTexture" id="7"]
viewport_path = NodePath("VBox/Images/HBox/End/SubViewport")

[sub_resource type="ShaderMaterial" id="8"]
resource_local_to_scene = true
shader = SubResource("5")
shader_parameter/begin = SubResource("6")
shader_parameter/end = SubResource("7")

[sub_resource type="Animation" id="9"]
resource_name = "show"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Diff:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Diff:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kxr6u"]
_data = {
"show": SubResource("9")
}

[sub_resource type="Shader" id="10"]

[sub_resource type="ShaderMaterial" id="11"]
render_priority = 0
shader = SubResource("10")

[node name="ExportAnimation" type="Window"]
title = "Export animation"
position = Vector2i(0, 36)
size = Vector2i(750, 300)
script = ExtResource("1")
shader = "uniform float mm_chunk_size = 1.0;
uniform vec2 mm_chunk_offset = vec2(0.0);

void fragment() {
	COLOR = preview_2d(mm_chunk_offset+mm_chunk_size*UV);
}"

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -114.0
offset_bottom = -81.0

[node name="Settings" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="SizeLabel" type="Label" parent="VBox/Settings"]
layout_mode = 2
text = "Size:"

[node name="Size" type="OptionButton" parent="VBox/Settings"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../Spritesheet")
focus_neighbor_right = NodePath("../Begin")
focus_next = NodePath("../Begin")
focus_previous = NodePath("../../Buttons/Close")
script = ExtResource("3")
size_value = 8

[node name="Space1" type="Control" parent="VBox/Settings"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="BeginLabel" type="Label" parent="VBox/Settings"]
layout_mode = 2
text = "Begin:"

[node name="Begin" parent="VBox/Settings" instance=ExtResource("2")]
layout_mode = 2
focus_neighbor_left = NodePath("../Size")
focus_neighbor_right = NodePath("../End")
focus_next = NodePath("../End")
focus_previous = NodePath("../Size")
value = 0.0
max_value = 10.0
float_only = true

[node name="Space2" type="Control" parent="VBox/Settings"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="EndLabel" type="Label" parent="VBox/Settings"]
layout_mode = 2
text = "End:"

[node name="End" parent="VBox/Settings" instance=ExtResource("2")]
layout_mode = 2
focus_neighbor_left = NodePath("../Begin")
focus_neighbor_right = NodePath("../Images")
focus_next = NodePath("../Images")
focus_previous = NodePath("../Begin")
value = 1.0
max_value = 10.0
float_only = true

[node name="Space3" type="Control" parent="VBox/Settings"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ImagesLabel" type="Label" parent="VBox/Settings"]
layout_mode = 2
text = "Images:"

[node name="Images" parent="VBox/Settings" instance=ExtResource("2")]
layout_mode = 2
focus_neighbor_left = NodePath("../End")
focus_neighbor_right = NodePath("../Spritesheet")
focus_next = NodePath("../Spritesheet")
focus_previous = NodePath("../End")
value = 10.0
min_value = 1.0
max_value = 100.0
step = 1.0
float_only = true

[node name="Space4" type="Control" parent="VBox/Settings"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Spritesheet" type="OptionButton" parent="VBox/Settings"]
layout_mode = 2
focus_neighbor_left = NodePath("../Images")
focus_neighbor_right = NodePath("../Size")
focus_next = NodePath("../../Buttons/Export")
focus_previous = NodePath("../Images")
item_count = 5
selected = 0
popup/item_0/text = "PNG files"
popup/item_0/id = 0
popup/item_1/text = "1 line spritesheet"
popup/item_1/id = 1
popup/item_2/text = "2 lines spritesheet"
popup/item_2/id = 2
popup/item_3/text = "4 lines spritesheet"
popup/item_3/id = 4
popup/item_4/text = "1 column spritesheet"
popup/item_4/id = 1001

[node name="Images" type="MarginContainer" parent="VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox/Images"]
layout_mode = 2

[node name="Begin" type="SubViewportContainer" parent="VBox/Images/HBox"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBox/Images/HBox/Begin"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
text = "First frame"
horizontal_alignment = 1

[node name="SubViewport" type="SubViewport" parent="VBox/Images/HBox/Begin"]
handle_input_locally = false
gui_disable_input = true
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="Image" type="ColorRect" parent="VBox/Images/HBox/Begin/SubViewport"]
material = SubResource("2")
custom_minimum_size = Vector2(256, 256)
offset_right = 256.0
offset_bottom = 256.0
color = Color(0, 0, 0, 1)

[node name="Animated" type="ColorRect" parent="VBox/Images/HBox"]
material = SubResource("4")
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="VBox/Images/HBox/Animated"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Animation"
horizontal_alignment = 1

[node name="Diff" type="ColorRect" parent="VBox/Images/HBox/Animated"]
modulate = Color(1, 1, 1, 0)
material = SubResource("8")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBox/Images/HBox/Animated/Diff"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.5
offset_right = 34.5
offset_bottom = 14.0
text = "Difference"

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBox/Images/HBox/Animated"]
libraries = {
"": SubResource("AnimationLibrary_kxr6u")
}

[node name="Timer" type="Timer" parent="VBox/Images/HBox/Animated"]
one_shot = true

[node name="End" type="SubViewportContainer" parent="VBox/Images/HBox"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBox/Images/HBox/End"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
text = "Last frame"
horizontal_alignment = 1

[node name="SubViewport" type="SubViewport" parent="VBox/Images/HBox/End"]
handle_input_locally = false
gui_disable_input = true
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="Image" type="ColorRect" parent="VBox/Images/HBox/End/SubViewport"]
material = SubResource("11")
custom_minimum_size = Vector2(256, 256)
offset_right = 256.0
offset_bottom = 256.0
color = Color(0, 0, 0, 1)

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Export" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
focus_next = NodePath("../Close")
focus_previous = NodePath("../../Settings/Spritesheet")
text = "Export"

[node name="Close" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
focus_next = NodePath("../../Settings/Size")
focus_previous = NodePath("../Export")
text = "Close"

[connection signal="close_requested" from="." to="." method="queue_free"]
[connection signal="minimum_size_changed" from="VBox" to="." method="_on_VBox_minimum_size_changed"]
[connection signal="value_changed" from="VBox/Settings/Begin" to="." method="_on_Begin_value_changed"]
[connection signal="value_changed" from="VBox/Settings/End" to="." method="_on_End_value_changed"]
[connection signal="timeout" from="VBox/Images/HBox/Animated/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="VBox/Buttons/Export" to="." method="_on_Export_pressed"]
[connection signal="pressed" from="VBox/Buttons/Close" to="." method="queue_free"]
